test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: static-ip
    networking.gke.io/managed-certificates: example-certificate
spec:
  rules:
  - host: movie-app.maximilien-bey.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-service
            port:
              number: 50001
